--- a/COMP1004-F2016-Assignment1/COMP1004-F2016-Assignment1.csproj
+++ b/COMP1004-F2016-Assignment1/COMP1004-F2016-Assignment1.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SalesBonusForm.cs">
+    <Compile Include="MailOrder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SalesBonusForm.Designer.cs">
-      <DependentUpon>SalesBonusForm.cs</DependentUpon>
+    <Compile Include="MailOrder.Designer.cs">
+      <DependentUpon>MailOrder.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="SalesBonusForm.resx">
-      <DependentUpon>SalesBonusForm.cs</DependentUpon>
+    <EmbeddedResource Include="MailOrder.resx">
+      <DependentUpon>MailOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
