--- a/COMP1004-F2016-Assignment1/COMP1004-F2016-Assignment1.csproj
+++ b/COMP1004-F2016-Assignment1/COMP1004-F2016-Assignment1.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorManager.cs" />
     <Compile Include="MailOrder.cs">
       <SubType>Form</SubType>
     </Compile>
