--- a/COMP1004-F2016-Assignment1/COMP1004-F2016-Assignment1.csproj
+++ b/COMP1004-F2016-Assignment1/COMP1004-F2016-Assignment1.csproj
@@ -47,16 +47,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorManager.cs" />
-    <Compile Include="MailOrder.cs">
+    <Compile Include="MailOrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MailOrder.Designer.cs">
-      <DependentUpon>MailOrder.cs</DependentUpon>
+    <Compile Include="MailOrderForm.Designer.cs">
+      <DependentUpon>MailOrderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MailOrder.resx">
-      <DependentUpon>MailOrder.cs</DependentUpon>
+    <EmbeddedResource Include="MailOrderForm.resx">
+      <DependentUpon>MailOrderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
